--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,10 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css" />
+    <script src="%PUBLIC_URL%/js/jquery-3.4.1.slim.min.js"></script>
+    <script src="%PUBLIC_URL%/js/popper.min.js"></script>
+    <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Web Nav</title>
@@ -18,6 +21,5 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
   </body>
 </html>
