--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
     <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Web Nav</title>
+    <title>网站导航</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
