导航栏的制作，还差动态效果

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/home.css" />
     <script src="%PUBLIC_URL%/js/jquery-3.4.1.slim.min.js"></script>
     <script src="%PUBLIC_URL%/js/popper.min.js"></script>
     <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
